manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: blunders-blog
  name: blunders-blog
