manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blunders-blog-deployment
  labels:
    app: blunders-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blunders-blog
  template:
    metadata:
      labels:
        app: blunders-blog
    spec:
      securityContext:
        runAsUser: 1200
        runAsGroup: 1200
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        readOnlyRootFilesystem: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: blunders-blog
        image: ghcr.io/unknownblunders/blunders-blog:d45f5fb414afce927babf4d97f5f85f1a15b19fd
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "25Mi"
            cpu: "1m"
          limits:
            memory: "50Mi"
            cpu: "10m"
        volumeMounts:
          - mountPath: /var/cache/nginx/client_temp
            name: temp-dir
      volumes:
      - name: temp-dir
        emptyDir:
          sizeLimit: 10Mi
