manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blunders-blog-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
