manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blunders-blog
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - blog.blunders.dev
    - blunders.dev
    - www.blunders.dev
    secretName: blunders-blog-secret-tls
  rules:
  - host: blog.blunders.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blunders-blog-service
            port:
              number: 80
